# voyage_a_rome

./: .claudeignore  .gitignore  CLAUDE.md  README.md  ROME_data_description.md  competences_pair_elo.py  document_rome_competences.json  document_rome_fiche_metiers.json  document_rome_metiers.json  document_rome_situations.json  get_metier.py  liste_competences.py  rank_competences.py  requirements.txt
claude_logs/: 2026-04-12-ELO_strategies.md  2026-04-12_algo_improvements.md  2026-04-12_design_decisions.md  2026-04-12_ranking_algo.md  2026-04-12_ui_ux_decisions.md  2026-04-12_ux_approach.md
data_pipeline/: pyproject.toml
data_pipeline/explo_rome/: api_utils.py  client.py  rome_api_cli.py
data_pipeline/scripts/: build_json.py  download_all.py  download_bulk.py  fiche_competences.py  list_interest.py  search_metier.py
docs/: index.html
docs/assets/: index-BhCxxR25.js  index-CkLUYF8f.css  index-Dc3qZncj.js  index-Dc9_jFq4.js  index-sEXpvanD.css
docs/data/: jobs.json  skill_jobs.json
explo_rome/: api_utils.py  rome_api_cli.py
webapp/: index.html  package-lock.json  package.json  vite.config.js
webapp/public/data/: jobs.json  skills.json
webapp/src/: App.svelte  app.css
webapp/src/lib/: ComparisonView.svelte  ResultsView.svelte  mockData.js  store.js
