[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explo_rome"
version = "0.1.0"
description = "Tools for exploiting ROME metier data"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Etienne", email = "etienne@example.com" } ]
dependencies = [
  "requests>=2.28",
  "PyYAML>=6.0",
  "rich>=13.0",
  "click>=8.0",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]
